2011-06-26  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-critical-indent): New option.
	(f90-font-lock-keywords-2, f90-blocks-re, f90-end-block-re)
	(f90-start-block-re, f90-mode-abbrev-table): Add block, critical.
	(f90-mode): Doc fix.
	(f90-looking-at-critical, f90-looking-at-end-critical): New funcs.
	(f90-no-block-limit, f90-calculate-indent, f90-end-of-block)
	(f90-beginning-of-block, f90-next-block, f90-indent-region)
	(f90-match-end): Handle block, critical.

2011-06-25  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-included-files): Doc fix.
	(diary-include-files): New function, extracted from
	diary-include-other-diary-files and diary-mark-included-diary-files.
	(diary-include-other-diary-files, diary-mark-included-diary-files):
	Just call diary-include-files.
	(diary-mark-entries): Reset diary-included-files on first call.

	* calendar/diary-lib.el (diary-mark-entries)
	(diary-mark-included-diary-files):
	Visit included diary-files in temp buffers.

	* progmodes/f90.el (f90-keywords-re, f90-font-lock-keywords-1)
	(f90-blocks-re, f90-program-block-re, f90-end-block-re)
	(f90-start-block-re, f90-imenu-generic-expression)
	(f90-looking-at-program-block-start, f90-no-block-limit):
	Add support for submodules.

	* progmodes/f90.el (f90-keywords-re, f90-keywords-level-3-re)
	(f90-procedures-re, f90-constants-re): Add some F2008 stuff.

2011-06-25  Eli Zaretskii  <eliz@gnu.org>

	* net/ange-ftp.el (ange-ftp-insert-file-contents): Let-bind
	buffer-file-type before setting its value, to avoid disastrous
	global effects on decoding files for DOS/Windows systems.  (Bug#8780)

2011-06-25  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-unload-function): Pass -1 to `allout-mode'.

	* ses.el (ses-unload-function):
	* emacs-lisp/re-builder.el (re-builder-unload-function): Simplify.

	* proced.el (proced-unload-function):
	* progmodes/cperl-mode.el (cperl-mode-unload-function): Remove.

2011-06-25  Andreas Rottmann  <a.rottmann@gmx.at>